--- a/src/Components/Socials/Socials.css
+++ b/src/Components/Socials/Socials.css
@@ -74,7 +74,7 @@
 
 @media only screen and (max-width: 480px) {
 	.social div {
-		min-width: 90%;
-		max-width: 90%;
+		min-width: 99%;
+		max-width: 99%;
 	}
 }
